--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@
         const videos = [
             { src: 'https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8', type: 'application/x-mpegURL' },
             { src: 'hls/main.m3u8', type: 'application/x-mpegURL' },
-            { src: 'demo01.mp4', type: 'video/mp4' },
-            { src: 'demo02.mp4', type: 'video/mp4' },
-            { src: 'demo03.mp4', type: 'video/mp4' }
+            { src: 'assets/demo01.mp4', type: 'video/mp4' },
         ];
         // const VIDEO_URL = 'hls/master.m3u8'; // 使用支持CORS的HLS视频源
         // const VIDEO_URL = 'output.mp4';
