--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
     <script>
         const videos = [
             { src: 'hls/variant.m3u8', type: 'application/x-mpegURL' },
-            { src: 'demo/variant.m3u8', type: 'application/x-mpegURL' },
-            { src: 'https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8', type: 'application/x-mpegURL' },
+            // { src: 'https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8', type: 'application/x-mpegURL' },
             { src: 'assets/demo01.mp4', type: 'video/mp4' },
         ];
         // const VIDEO_URL = 'hls/master.m3u8'; // 使用支持CORS的HLS视频源
